# quake2

./: .gitignore  CMakeLists.txt  FindOpenGLES2.cmake
Engine/Sources/Compatibility/OpenGLES/: OpenGLWrapper.c  OpenGLWrapper.h
Engine/Sources/Compatibility/SDL/: SDLWrapper.h  shader.c
Engine/Sources/Compatibility/netML/: NMLWrapper.cpp  gl_vkb1.c
Ports/Quake1/Sources/Common/: cmd.c  cmd.h
Ports/Quake2/Sources/backends/sdl/: audio_sdl.c
Ports/Quake2/Sources/client/: ref.h
Ports/Quake2/Sources/client/refresh/: r_main.c  win_platform.h
Ports/Quake2/Sources/client/refresh/nml/: win.cpp
Ports/Quake2/Sources/client/refresh/sdl/: win.c
Ports/Quake2/Sources/common/: argproc.c  cmdparser.c  common.h  cvar.c  misc.c
Ports/Quake2/Sources/common/shared/: shared.h
